k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app-svc
  namespace: myapp
spec:
  type: NodePort
  selector:
    app: front
  ports:
  - name: http
    port: 80
    targetPort: 8080
