k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-Ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: gce  # Ingress Controller with GCE HTTP(S) LB
#    kubernetes.io/ingress.class: azure/application-gateway # Ingress Controller with AKS Application Gateway
#    kubernetes.io/ingress.class: nginx # Nginx Ingress Controller
    kubernetes.io/ingress.global-static-ip-name: global-static-ip # Create a Global IP static IP address
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: front-app-svc
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: backend-app-svc
          servicePort: 8000
